# rules_jvm_external_javadoc_protobuf

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Main.java  WORKSPACE.bazel  schema.proto
