load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
load("@rules_java//java:defs.bzl", "java_library", "java_proto_library")
load("@rules_jvm_external//:defs.bzl", "java_export")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "proto",
    srcs = [
        "schema.proto"
    ],
)

java_proto_library(
    name = "java_proto",
    deps = [":proto"],
)

java_grpc_library(
    name = "java_grpc",
    srcs = [":proto"],
    deps = [":java_proto"],
)

java_library(
    name = "lib",
    srcs = [
        "Main.java"
    ],
    javacopts = ["--release 11"],
    deps = [
        ":java_proto"
    ]
)

java_export(
    name = "export",
    srcs = [
        "Main.java"
    ],
    javacopts = ["--release 11"],
    deps = [
        ":java_proto"
    ],
    maven_coordinates = "org:sample:1.0.0"
)